# self-forcing-jax

./: README.md  main.py  pyproject.toml
self_forcing/: run.py
self_forcing/model/: wan.py
self_forcing_jax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
